syntax = "proto3";

package contract.dto;

message SettingsProto {
  string settings_id = 1;
  string export_path = 2;
  bool is_add_new_tickets_to_current_sprint_active = 3;
}
